# 0.00.05 (54837) Aug 3, 2011
8/3/11 Publishing updated version to dev for review.
Improved placement of the control panels.
Moved columns so that the red x wouldn't be overlapped by force vectors.
Made it easier to place masses on the plank by using the center point rather than the bottom of the mass.
Added distance vectors.
Made the plank motion settle out more quickly (i.e. it oscillates less before becoming still).
Hooked up vector visibility to control panel.
Added vectors due to masses on the planks.
# 0.00.04 (54743) Aug 2, 2011
8/2/11 Deploying to dev again due to issues with previous deployment
# 0.00.03 (54712) Aug 1, 2011
Fixed an issue where the gradient didn't move with the attachment bar.
8/1/11 Deploying to dev for review at weekly meeting
Added control panel for vectors (but not the actual vectors yet).
Fixed: blocks look like they are sliding along the plank surface
Improved the V support shape for fulcrum above plank shape
Added support for having the pivot above the plank.
# 0.00.02 (54292) Jul 19, 2011
7/19/11 Deploying snapshot to dev
Added the "mystery masses".
Added adult to masses.
# 0.00.01 (54036) Jul 13, 2011
7/13/11 Publishing an early snapshot of this sim to dev.
Improved layout for block control panel
Added title to block control panel
Added "previous/next" buttons to control panel
Added handling for the removal of weights (currently on brick stacks) from the model, and made it so that stacks are removed if they are ever released anywhere other than over the plank.
Added bricks and weights and got them working.
Added fulcrum and plank