@@ -1,0 +1,11 @@
+// Copyright 2002-2011, University of Colorado
+package edu.colorado.phet.balanceandtorque.teetertotter.view;
+
+import edu.umd.cs.piccolo.PNode;
+
+/**
+ * @author Sam Reid
+ */
+public class MassKit extends PNode {
+
+}
